--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Monster Lair</string>
 
+    <string name="fragment_monsters">Monsters</string>
+    <string name="fragment_hazards">Hazards</string>
+    <string name="fragment_encounters">Encounters</string>
+    <string name="fragment_encounter_creator">Create Encounter</string>
+    <string name="fragment_encounter_export">Export Encounter</string>
+
     <string name="hazard_item_caption">%s \u2014 Level: %d</string>
     <string name="monster_item_caption">%s \u2014 Level: %d</string>
     <string name="monster_search">Search</string>
