--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,5 +95,6 @@
 
     <string name="encounter_danger_added">%s added</string>
     <string name="encounter_name_hint">Encounter Name</string>
+    <string name="within_budget">Include only dangers within budget</string>
 
 </resources>
