--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,20 @@
     <string name="random_encounter_information">Info</string>
     <string name="random_encounter_information_title">How it works</string>
 
+    <string name="custom_monster_hint">This is one of your custom monsters and has no Archive of Nethys entry.</string>
+    <string name="custom_monster_create_title">Add Custom Monster</string>
+    <string name="custom_monster_edit_title">Edit Custom Monster</string>
+    <string name="custom_monster_create_name">Name</string>
+    <string name="custom_monster_create_level">Level</string>
+    <string name="custom_monster_create_family">Family</string>
+    <string name="custom_monster_create_type">Type</string>
+    <string name="custom_monster_create_button">Save</string>
+    <string name="custom_monster_edit_button">Save</string>
+    <string name="custom_monster_edit_button_option">Edit</string>
+    <string name="custom_monster_delete_button">Delete</string>
+    <string name="custom_monster_create_wrong_level">Please enter a valid level between -1 and 25.</string>
+    <string name="custom_monster_create_empty_name">Please enter a valid name.</string>
+    <string name="custom_monster_create_empty_type">Please enter a valid type.</string>
+    <string name="custom_monster_save_confirmation">%s saved.</string>
+
 </resources>
