--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,9 +44,9 @@
 
     <string name="role_low_lackey">Low-threat lackey</string>
     <string name="role_moderate_lackey">Low- or moderate-threat lackey</string>
-    <string name="role_standard_lackey">Any lackey or standard creature</string>
-    <string name="role_standard_creature">Any standard creature</string>
-    <string name="role_low_boss">Any standard creature or low-threat boss</string>
+    <string name="role_standard_lackey">Lackey or standard creature</string>
+    <string name="role_standard_creature">Standard creature</string>
+    <string name="role_low_boss">Standard creature or low-threat boss</string>
     <string name="role_moderate_boss">Low- or moderate-threat boss</string>
     <string name="role_severe_boss">Moderate- or severe-threat boss</string>
     <string name="role_extreme_boss">Severe- or extreme-threat boss</string>
@@ -57,9 +57,9 @@
 
     <string name="role_low_lackey_hazard">Low-threat lackey hazard</string>
     <string name="role_moderate_lackey_hazard">Low- or moderate-threat lackey hazard </string>
-    <string name="role_standard_lackey_hazard">Any lackey or standard hazar </string>
-    <string name="role_standard_hazard">Any standard hazard</string>
-    <string name="role_low_boss_hazard">Any standard or low-threat boss hazard</string>
+    <string name="role_standard_lackey_hazard">Lackey or standard hazard </string>
+    <string name="role_standard_hazard">Standard hazard</string>
+    <string name="role_low_boss_hazard">Standard or low-threat boss hazard</string>
     <string name="role_moderate_boss_hazard">Low- or moderate-threat boss hazard</string>
     <string name="role_severe_boss_hazard">Moderate- or severe-threat boss hazard</string>
     <string name="role_extreme_boss_hazard">Severe- or extreme-threat boss hazard</string>
@@ -75,6 +75,7 @@
     <string name="create_encounter_button">Create</string>
     <string name="edit_encounter">Edit Encounter</string>
     <string name="random_encounter">Random</string>
+    <string name="treasure_recommendation">Treasure for Level</string>
 
     <string name="encounter_budget_xp">XP: %d / %d</string>
     <string name="encounter_budget_difficulty">Current Difficulty: %s</string>
@@ -162,6 +163,6 @@
     <string name="custom_monster_save_confirmation">%s saved.</string>
 
     <string name="whats_new">What\'s new (%s)</string>
-    <string name="whats_new_8">- Random Encounters now include templates from the GMG.\n- Custom monsters can now be added.\n- Revamp of the encounter and creator pages.</string>
+    <string name="whats_new_8">- Random Encounters now include templates from the GMG.\n- Custom monsters can now be added.\n- Added a dialog to display the treasure by level values from the Core Rulebook, adjusted for players.\n- Player number and level of encounters can now be adjusted\n- Revamp of the encounter and creator pages.</string>
 
 </resources>
