--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@
     <string name="scroll_up_description">Scroll up</string>
     <string name="encounter_print">Print</string>
     <string name="encounter_delete">Delete</string>
-    <string name="hazard_complexity">Filter By Complexity</string>
+    <string name="hazard_complexity">Complexities</string>
     <string name="hazard_complexity_encounter_creator">Filter By Hazard Complexity</string>
 
     <string name="encounter_danger_added">%s added</string>
