--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,7 +170,7 @@
     <string name="whats_new">What\'s new (%s)</string>
     <string name="whats_new_8">- Random Encounters now include templates from the GMG.\n- Custom monsters can now be added.\n- Added a dialog to display the treasure by level values from the Core Rulebook, adjusted for players.\n- Player number and level of encounters can now be adjusted\n- Revamp of the encounter and creator pages.</string>
     <string name="whats_new_10">- Added monsters from the Bestiary 2 and NPCs from the GMG (both under monsters). Hazards are updated as well. \n- Reversed encounter order, newest first.\n- Added small intro to the encounter creator</string>
-    <string name="whats_new_11">- Redesigned the app a bit. Filter should be easier to access and are more powerful.\n- Added Proficiency Without Level variant rules, Weak and Elite templates and notes to the encounter creator. \n- Added the option to filter sources. \n- Added treasures and a small random treasure generator.\n\n I also reworked the way everything is stored. Let me know, if there is something wrong with your data.</string>
+    <string name="whats_new_11">- Redesigned the app a bit. Filters should be easier to access and are more powerful.\n- Added Proficiency Without Level variant rules, Weak and Elite templates and notes to the encounter creator. \n- Added the option to filter sources. \n- Added treasures and a small random treasure generator.\n\n I also reworked the way everything is stored. Let me know, if there is something wrong with your data.</string>
     <string name="encounter_creator_introduction_title">Small Intro</string>
     <string name="encounter_creator_introduction">Here\'s a small introduction to the encounter creator since the UI is still pretty sloppy:\n\n- Pull up the Search bar to access filters for monsters &amp; hazards (type, level, etc.)\n- Add your own monsters using +\n- Create random encounters by clicking the dice\n- Get treasure recommendations for your group by clicking the chest</string>
     <string name="updating_data">Updating Data ...</string>
@@ -285,8 +285,9 @@
     <string name="empty_hazard_text">There are no hazards that fit your filters.\nTry to define looser criteria.</string>
     <string name="empty_treasure_text">There are is no treasure that fits your filter settings.\nTry to define looser criteria.</string>
     <string name="additional_filters">Additional Filters</string>
-    <string name="create_random_treasure">Create Random Treasure for Level</string>
+    <string name="create_random_treasure">Create Random Treasure</string>
     <string name="random_treasure">Random Treasure</string>
     <string name="create_random_treasure_error">Could not create random treasure - maybe you are limiting the sources too much.</string>
+    <string name="random_treasure_description">This generates the treasure rewards for a whole party level as recommended by the Core Rulebook. Split up the treasure for your encounters as you see fit!</string>
 
 </resources>
