--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="hazard_item_caption">%s \u2014 Level: %d</string>
     <string name="monster_item_caption">%s \u2014 Level: %d</string>
+    <string name="monster_description">%s \u2014 %s</string>
     <string name="search">Search</string>
     <string name="level_range">Level Range</string>
     <string name="sort_by">Sort By</string>
@@ -252,6 +253,16 @@
     <string name="alignment_chaotic_neutral">Chaotic Neutral</string>
     <string name="alignment_chaotic_evil">Chaotic Evil</string>
 
+
+    <string name="alignment_lawful_good_short">LG</string>
+    <string name="alignment_lawful_neutral_short">LN</string>
+    <string name="alignment_lawful_evil_short">LE</string>
+    <string name="alignment_neutral_good_short">NG</string>
+    <string name="alignment_true_neutral_short">N</string>
+    <string name="alignment_neutral_evil_short">NE</string>
+    <string name="alignment_chaotic_good_short">CG</string>
+    <string name="alignment_chaotic_neutral_short">CN</string>
+    <string name="alignment_chaotic_evil_short">CE</string>
 
     <string name="additonal_filters">Additional Filters</string>
     <string name="done">Done</string>
